--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fashion TV</title>
     <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/responsive.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -118,14 +119,14 @@
                 <div class="footer-content">
                     <input type="email" placeholder="Enter your Email id" id="email">
                     <i class="fa fa-envelope-o"></i>
-                    <button class="fa fa-long-arrow-right"></button>
+                    <button type="submit" class="fa fa-long-arrow-right"></button>
                 </div>
                 <ul>
                     <li><a href="">Careers </a></li>
                     <span>|</span>
                     <li><a href="">Privacy Policy</a></li>
                     <span>|</span>
-                    <li><a href="">Careers</a></li>
+                    <li><a href="">Terms & Conditions</a></li>
                 </ul>
                 <ul>
                     <li> <i class="fa fa-facebook"></i></li>
