--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fashion TV</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+
     <link rel="stylesheet" href="./style/style.css" />
     <link rel="stylesheet" href="./style/responsive.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,7 +19,7 @@
     <div class="logo">
         <img src="./assets/images/Group 578.png" alt="" srcset="" />
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="video-overlay"></div>
         <div class="video-box">
             <video src="./assets/INTRO-FTV EVENTS.mp4" muted autoplay loop></video>
@@ -77,29 +79,28 @@
         </div>
         <div class="pre-req">
             <div class="card_grid">
-                <div class="card">
+                <div class="cards">
                     <h1>AAA LOCATION
                     </h1>
                     <p>FTV franchise should be located in a prime triple A location of the city</p>
                 </div>
-                <div class="card">
+                <div class="cards">
                     <h1>STRONG FINANCIAL <br> BACKINGS
                     </h1>
                     <p>FTV franchise should be located in a prime triple A location of the city.</p>
                 </div>
-                <div class="card">
+                <div class="cards">
                     <img src="./assets/images/Path 713.png" alt="">
                     <h2>FRANCHISE PRE <br> REQUISITES
                     </h2>
                 </div>
-                <div class="card">
+                <div class="cards">
                     <h1>FRANCHISE INDUSTRY <br> ATTRACTION
                     </h1>
                     <p>All franchises must have attractions and likings towards the desired industry with a zeal to learn, explore and strive to succeed
                     </p>
                 </div>
-
-                <div class="card">
+                <div class="cards">
                     <h1>STRONG DESIRE TO <br> BE MORE.
                     </h1>
                     <p>Get rich, famous and successful.
@@ -108,6 +109,15 @@
             </div>
         </div>
     </div>
+
+    <!-- Brand and Support -->
+    <div id="brandsupport">
+        <img src="./assets/images/brandsupport.png" alt="">
+        <p>FashionTV gives 360 degree support to all our franchise partners. We help in all aspects ranging from <br> location, architecture, staff recruitment to PR launch plan, social media marketing, auditing, cross <br> marketing and more. Strategic
+            planning which is very important for the success of any business, <br> is worked on extensively by our team and franchise partners. </p>
+    </div>
+
+
 
     <div id="footer">
         <div class="footer-main">
@@ -118,7 +128,7 @@
             <div class="footer-main-content">
                 <div class="footer-content">
                     <input type="email" placeholder="Enter your Email id" id="email">
-                    <i class="fa fa-envelope-o"></i>
+                    <i style="color:#F0BD79 !important;" class="fa fa-envelope-o"></i>
                     <button type="submit" class="fa fa-long-arrow-right"></button>
                 </div>
                 <ul>
@@ -139,6 +149,11 @@
             </div>
         </div>
     </div>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
