--- a/features.html
+++ b/features.html
@@ -16,6 +16,31 @@
 <body>
     <!-- Home section -->
     <div id="nite-home">
+        <div id="navbar">
+            <div class="navbar_button">
+                <span id="bar1" class="bar"></span>
+                <span id="bar2" class="bar"></span>
+                <span id="bar2b" class="bar"></span>
+                <span id="bar3" class="bar"></span>
+            </div>
+            <div class="round_nav">
+            </div>
+            <div class="nav_content">
+                <ul>
+                    <li> <a href="./home.html">Home</a> </li>
+                    <li> <a href="./micheladam.html">Michel Adam</a> </li>
+                    <li> <a href="./kashiffkhan.html">Kashiff Khan</a></li>
+                    <li>
+                        <a href="./franchise.html">Fashion TV</a> </li>
+                    <li><a href="./shows.html">Channels</a></li>
+                    <li><a href="./nites.html">FTV Champagne NITES</a></li>
+                    <li><a href="./features.html">FTV Champagne Features</a></li>
+                    <li><a href="./introducation.html">Introduction</a></li>
+
+                </ul>
+            </div>
+
+        </div>
 
         <div class="logo">
             <img src="./assets/images/Group 578.png" alt="" srcset="" />
@@ -23,7 +48,9 @@
         <div class="container-fluid">
             <div class="video-overlay"></div>
             <div class="video-box">
-                <video src="./assets/INTRO-FTV EVENTS.mp4" muted autoplay loop></video>
+                <video id="vid" loop muted autoplay>
+                    <source id="fevid" src="./assets/videos/ftv champagne feature/Home page Champagne feature.mp4" type="video/mp4">
+                  </video>
             </div>
             <div class="video-content">
                 <h4>INTRODUCING</h4>
@@ -144,6 +171,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
