--- a/kashiffkhan.html
+++ b/kashiffkhan.html
@@ -13,6 +13,32 @@
 
 <body>
     <!-- Home section -->
+
+    <div id="navbar">
+        <div class="navbar_button">
+            <span id="bar1" class="bar"></span>
+            <span id="bar2" class="bar"></span>
+            <span id="bar2b" class="bar"></span>
+            <span id="bar3" class="bar"></span>
+        </div>
+        <div class="round_nav">
+        </div>
+        <div class="nav_content">
+            <ul>
+                <li> <a href="./home.html">Home</a> </li>
+                <li> <a href="./micheladam.html">Michel Adam</a> </li>
+                <li> <a href="./kashiffkhan.html">Kashiff Khan</a></li>
+                <li>
+                    <a href="./franchise.html">Fashion TV</a> </li>
+                <li><a href="./shows.html">Channels</a></li>
+                <li><a href="./nites.html">FTV Champagne NITES</a></li>
+                <li><a href="./features.html">FTV Champagne Features</a></li>
+                <li><a href="./introducation.html">Introduction</a></li>
+
+            </ul>
+        </div>
+
+    </div>
     <div id="shows-home">
         <div class="logo">
             <img src="./assets/images/Group 578.png" alt="" srcset="" />
@@ -152,6 +178,11 @@
                         <span>|</span>
                         <li><a href="">Terms & Conditions</a></li>
                     </ul>
+                    <ul>
+                        <li> <i class="fa fa-facebook"></i></li>
+                        <li> <i class="fa fa-instagram"></i></li>
+                        <li> <i class="fa fa-twitter"></i></li>
+                    </ul>
                 </div>
                 <div class="ft-logo-right">
                     <img src="./assets/images/Group 567.png" alt="" />
@@ -164,6 +195,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="main.js"></script>
 </body>
 
 </html>
