--- a/kashiffkhan.html
+++ b/kashiffkhan.html
@@ -25,7 +25,7 @@
         </div>
         <div class="nav_content">
             <ul>
-                <li> <a href="./home.html">Home</a> </li>
+                <li> <a href="./index.html">Home</a> </li>
                 <li> <a href="./micheladam.html">Michel Adam</a> </li>
                 <li> <a href="./kashiffkhan.html">Kashiff Khan</a></li>
                 <li>
