--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- About section -->
 
 
-    <div id="home-chapmign-about">
+    <section id="home-chapmign-about">
         <div class="container-fluid">
             <div class="ft-logo-left">
                 <img src="./assets/images/Group 568.png" alt="" />
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <div id="bigbanner">
 
@@ -118,7 +118,7 @@
 
     <!-- Versatility Started Here -->
 
-    <div id="versatility-container">
+    <section id="versatility-container">
         <div class="container">
             <div class="text-content">
                 <h1>VERSATILITY</h1>
@@ -128,7 +128,7 @@
                 <img src="assets/images/verslity.jpg" alt="">
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Home Footer Started -->
 
