--- a/nites.html
+++ b/nites.html
@@ -104,10 +104,10 @@
     <div id="philosophy">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-sm-12 col-12 main-title">
+                <div class="col-lg-6 col-md-4 col-sm-12 col-12 main-title">
                     <h1>PHILOSOPHY</h1>
                 </div>
-                <div class="col-lg-6 col-sm-12 col-12 main-content">
+                <div class="col-lg-6 col-md-8 col-sm-12 col-12 main-content">
                     <ul>
                         <div class="list">
                             <li>VISION</li>
