--- a/shows.html
+++ b/shows.html
@@ -87,7 +87,7 @@
         <div class="intro-feature">
             <div class="intro-cards">
                 <div class="row">
-                    <div class="col-lg-7 col-sm-12 col-12">
+                    <div class="col-lg-7 col-md-6 col-sm-12 col-12">
                         <div class="cards-title">
                             <h1>MIDNIGHT SECRETS</h1>
                         </div>
@@ -97,17 +97,17 @@
                                 the channel ‘on-demand’ with our VOD service any time you want.</p>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-sm-12 col-12">
+                    <div class="col-lg-5  col-md-6 col-sm-12 col-12">
                         <img src="./assets/images/keyfact.png" alt="" srcset="" />
                     </div>
                 </div>
             </div>
             <div class="intro-cards">
                 <div class="row">
-                    <div class="col-lg-5 col-sm-12 col-12">
+                    <div class="col-lg-5  col-md-6 col-sm-12 col-12">
                         <img src="./assets/images/milstone.png" alt="" srcset="" />
                     </div>
-                    <div class="col-lg-7 col-sm-12 col-12">
+                    <div class="col-lg-7  col-md-6 col-sm-12 col-12">
                         <div class="cards-title">
                             <h1>F-MEN</h1>
                         </div>
