--- a/introducation.html
+++ b/introducation.html
@@ -20,22 +20,21 @@
             <span id="bar2b" class="bar"></span>
             <span id="bar3" class="bar"></span>
         </div>
-        <div class="round_nav">
-        </div>
+        <div class="round_nav"></div>
         <div class="nav_content">
             <ul>
-                <li> <a href="./index.html">Home</a> </li>
-                <li> <a href="./micheladam.html">Michel Adam</a> </li>
-                <li> <a href="./kashiffkhan.html">Kashiff Khan</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./micheladam.html">Michel Adam</a></li>
+                <li><a href="./kashiffkhan.html">Kashiff Khan</a></li>
                 <li>
-                    <a href="./franchise.html">Fashion TV</a> </li>
+                    <a href="./franchise.html">Fashion TV</a>
+                </li>
                 <li><a href="./shows.html">Channels</a></li>
                 <li><a href="./nites.html">FTV Champagne NITES</a></li>
                 <li><a href="./features.html">FTV Champagne Features</a></li>
                 <li><a href="./introducation.html">Introduction</a></li>
             </ul>
         </div>
-
     </div>
     <div id="intro-home">
         <div class="logo">
@@ -45,8 +44,12 @@
             <div class="video-overlay"></div>
             <div class="video-box">
                 <video id="vid" loop muted autoplay>
-                    <source id="introvid" src="./assets/videos/INTRODUCTION 1-PAGE/dekstop & mobile/Land Page _01 Video.mp4" type="video/mp4">
-                  </video>
+            <source
+              id="introvid"
+              src="./assets/videos/INTRODUCTION 1-PAGE/dekstop & mobile/Land Page _01 Video.mp4"
+              type="video/mp4"
+            />
+          </video>
             </div>
 
             <div class="ft-logo-right">
@@ -86,7 +89,7 @@
         <div class="intro-feature">
             <div class="cards">
                 <div class="row">
-                    <div class="col-lg-7 col-sm-12 col-12">
+                    <div class="col-lg-7 col-md-6 col-sm-12 col-12">
                         <div class="cards-title">
                             <h1>KEY FACTS</h1>
                         </div>
@@ -117,17 +120,17 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-sm-12 col-12">
+                    <div class="col-lg-5 col-md-6 col-sm-12 col-12">
                         <img src="./assets/images/keyfact.png" alt="" srcset="" />
                     </div>
                 </div>
             </div>
             <div class="cards">
                 <div class="row">
-                    <div class="col-lg-5 col-sm-12 col-12">
+                    <div class="col-lg-5 col-md-6 col-sm-12 col-12">
                         <img src="./assets/images/milstone.png" alt="" srcset="" />
                     </div>
-                    <div class="col-lg-7 col-sm-12 col-12">
+                    <div class="col-lg-7 col-md-6 col-sm-12 col-12">
                         <div class="cards-title">
                             <h1>MILESTONES</h1>
                         </div>
@@ -153,7 +156,7 @@
             </div>
             <div class="cards">
                 <div class="row">
-                    <div class="col-lg-7 col-sm-12 col-12">
+                    <div class="col-lg-7 col-md-6 col-sm-12 col-12">
                         <div class="cards-title">
                             <h1>NEW MEDIA</h1>
                         </div>
@@ -181,17 +184,17 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-sm-12 col-12">
+                    <div class="col-lg-5 col-md-6 col-sm-12 col-12">
                         <img src="./assets/images/newmedia.png" alt="" srcset="" />
                     </div>
                 </div>
             </div>
             <div class="cards">
                 <div class="row">
-                    <div class="col-lg-5 col-sm-12 col-12">
+                    <div class="col-lg-5 col-md-6 col-sm-12 col-12">
                         <img src="./assets/images/future.png" alt="" srcset="" />
                     </div>
-                    <div class="col-lg-7 col-sm-12 col-12">
+                    <div class="col-lg-7 col-md-6 col-sm-12 col-12">
                         <div class="cards-title">
                             <h1>FUTURE</h1>
                         </div>
@@ -220,7 +223,7 @@
             </div>
             <div class="cards">
                 <div class="row">
-                    <div class="col-lg-7 col-sm-12 col-12">
+                    <div class="col-lg-7 col-md-6 col-sm-12 col-12">
                         <div class="cards-title">
                             <h1>CONCLUSION</h1>
                         </div>
@@ -241,7 +244,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-sm-12 col-12">
+                    <div class="col-lg-5 col-md-6 col-sm-12 col-12">
                         <img src="./assets/images/newmedia.png" alt="" srcset="" />
                     </div>
                 </div>
@@ -249,15 +252,16 @@
         </div>
     </div>
 
-
     <!---------Intro More Features-------->
 
     <div id="intro-achiv">
         <div class="container">
             <div class="row">
                 <div class="feature-title">
-                    <h1>FASHIONTV <br>FEATURES</h1>
-                    <p>Here are some amazing features <br> about FashionTV . . .</p>
+                    <h1>FASHIONTV <br />FEATURES</h1>
+                    <p>
+                        Here are some amazing features <br /> about FashionTV . . .
+                    </p>
                 </div>
                 <div class="feature-counts">
                     <ul>
@@ -271,11 +275,14 @@
                         </li>
                         <li>
                             <h1>10</h1>
-                            <p>Million Public <br> Places </p>
+                            <p>
+                                Million Public <br /> Places
+                            </p>
                         </li>
                         <li>
                             <h1>20+</h1>
-                            <p>Pageviews on <br> FashionTV.com
+                            <p>
+                                Pageviews on <br /> FashionTV.com
                             </p>
                         </li>
                     </ul>
@@ -286,20 +293,24 @@
                         </li>
                         <li>
                             <h1>500</h1>
-                            <p>Million Households <br> TV Sets</p>
+                            <p>
+                                Million Households <br /> TV Sets
+                            </p>
                         </li>
                         <li>
                             <h1>4th</h1>
-                            <p>World’s Most <br> Distributed Channel </p>
+                            <p>
+                                World’s Most <br /> Distributed Channel
+                            </p>
                         </li>
                         <li>
                             <h1>65</h1>
-                            <p>Million views <br> on YouTube
+                            <p>
+                                Million views <br /> on YouTube
                             </p>
                         </li>
                     </ul>
                 </div>
-
             </div>
             <div class="main-feature-counts">
                 <ul>
@@ -313,11 +324,14 @@
                     </li>
                     <li>
                         <h1>10</h1>
-                        <p>Million Public <br> Places </p>
+                        <p>
+                            Million Public <br /> Places
+                        </p>
                     </li>
                     <li>
                         <h1>20+</h1>
-                        <p>Pageviews on <br> FashionTV.com
+                        <p>
+                            Pageviews on <br /> FashionTV.com
                         </p>
                     </li>
                 </ul>
@@ -345,9 +359,9 @@
                     <li><a href="">Terms & Conditions</a></li>
                 </ul>
                 <ul>
-                    <li> <i class="fa fa-facebook"></i></li>
-                    <li> <i class="fa fa-instagram"></i></li>
-                    <li> <i class="fa fa-twitter"></i></li>
+                    <li><i class="fa fa-facebook"></i></li>
+                    <li><i class="fa fa-instagram"></i></li>
+                    <li><i class="fa fa-twitter"></i></li>
                 </ul>
             </div>
             <div class="ft-logo-right">
@@ -355,8 +369,6 @@
             </div>
         </div>
     </div>
-
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
