--- a/features.html
+++ b/features.html
@@ -31,11 +31,11 @@
                     <li> <a href="./micheladam.html">Michel Adam</a> </li>
                     <li> <a href="./kashiffkhan.html">Kashiff Khan</a></li>
                     <li>
-                        <a href="./franchise.html">Fashion TV</a> </li>
+                        <a href="./introducation.html">Fashion TV</a> </li>
                     <li><a href="./shows.html">Channels</a></li>
                     <li><a href="./nites.html">FTV Champagne NITES</a></li>
                     <li><a href="./features.html">FTV Champagne Features</a></li>
-                    <li><a href="./introducation.html">Introduction</a></li>
+                    <li><a href="./franchise.html">Franchise</a></li>
 
                 </ul>
             </div>
@@ -64,13 +64,13 @@
     </div>
 
     <!-- Feature -->
-    <div id="featuressupport">
+    <section id="featuressupport">
         <h1>Highly <br>
             <span>Intriguing</span></h1>
         <p>Pop up events scene is taking its baby steps in India. Many people are still unaware of what a popup event is and how it works. A pop-up event is a unique, temporary and unexpected event in unique places around the town Pop up events usually last
             for a few hours, a day or even a week. They are known for their randomness with high intrigue, exclusivity, and mystery. FTV has determined to give our premium audience the same experience with FTV Champagne Nite.
         </p>
-    </div>
+    </section>
 
     <!-- Video Container Started Here -->
 
@@ -101,7 +101,7 @@
 
     <!-- AESTHETIC,INSTAGRAMWORTHY AMBIENCE started here -->
 
-    <div id="featureinfo">
+    <section id="featureinfo">
         <div class="container">
             <div class="featureinfo-content">
                 <p>FashionTV is known for delivering an extravagant and luxurious experience and setting. The FTV champagne nites successfully fulfil the same expectations of aesthetic and Instagram worthy ambience to set the mood right.</p>
@@ -111,11 +111,11 @@
                 <img src="./assets/images/AESTHETIC,     INSTAGRAMWORTHY        AMBIENCE.png" alt="">
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Features End Section Started Here -->
 
-    <div id="verscelb-container">
+    <section id="verscelb-container">
         <div class="container">
             <div class="cardsz">
                 <h1>VERSATILITY</h1>
@@ -129,7 +129,7 @@
             <img src="./assets/images/featureinfo.png" alt="">
 
         </div>
-    </div>
+    </section>
 
 
     <!-- Footer sections started here -->
