--- a/introducation.html
+++ b/introducation.html
@@ -23,16 +23,16 @@
         <div class="round_nav"></div>
         <div class="nav_content">
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./micheladam.html">Michel Adam</a></li>
-                <li><a href="./kashiffkhan.html">Kashiff Khan</a></li>
+                <li> <a href="./index.html">Home</a> </li>
+                <li> <a href="./micheladam.html">Michel Adam</a> </li>
+                <li> <a href="./kashiffkhan.html">Kashiff Khan</a></li>
                 <li>
-                    <a href="./franchise.html">Fashion TV</a>
-                </li>
+                    <a href="./introducation.html">Fashion TV</a> </li>
                 <li><a href="./shows.html">Channels</a></li>
                 <li><a href="./nites.html">FTV Champagne NITES</a></li>
                 <li><a href="./features.html">FTV Champagne Features</a></li>
-                <li><a href="./introducation.html">Introduction</a></li>
+                <li><a href="./franchise.html">Franchise</a></li>
+
             </ul>
         </div>
     </div>
@@ -85,7 +85,7 @@
 
     <!-- Intro Features section -->
 
-    <div id="introduction-feature">
+    <section id="introduction-feature">
         <div class="intro-feature">
             <div class="cards">
                 <div class="row">
@@ -250,11 +250,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!---------Intro More Features-------->
 
-    <div id="intro-achiv">
+    <section id="intro-achiv">
         <div class="container">
             <div class="row">
                 <div class="feature-title">
@@ -337,7 +337,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Intro Footer Started -->
 
     <div id="footer">
