--- a/nites.html
+++ b/nites.html
@@ -30,11 +30,11 @@
                     <li> <a href="./micheladam.html">Michel Adam</a> </li>
                     <li> <a href="./kashiffkhan.html">Kashiff Khan</a></li>
                     <li>
-                        <a href="./franchise.html">Fashion TV</a> </li>
+                        <a href="./introducation.html">Fashion TV</a> </li>
                     <li><a href="./shows.html">Channels</a></li>
                     <li><a href="./nites.html">FTV Champagne NITES</a></li>
                     <li><a href="./features.html">FTV Champagne Features</a></li>
-                    <li><a href="./introducation.html">Introduction</a></li>
+                    <li><a href="./franchise.html">Franchise</a></li>
 
                 </ul>
             </div>
@@ -62,7 +62,7 @@
     <!-- About section -->
 
 
-    <div id="chapmign-about">
+    <section id="chapmign-about">
         <div class="container-fluid">
             <div class="ft-logo-left">
                 <img src="./assets/images/Group 568.png" alt="" />
@@ -93,7 +93,7 @@
             </div>
         </div>
 
-    </div>
+    </section>
 
     <!-- Banner Image section -->
 
@@ -101,7 +101,7 @@
         <img src="./assets/images/14.png" alt="" srcset="">
     </div>
 
-    <div id="philosophy">
+    <section id="philosophy">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-4 col-sm-12 col-12 main-title">
@@ -131,7 +131,7 @@
             </div>
         </div>
 
-    </div>
+    </section>
 
     <!-- Nites Footer Started -->
 
