--- a/franchise.html
+++ b/franchise.html
@@ -30,11 +30,11 @@
                 <li> <a href="./micheladam.html">Michel Adam</a> </li>
                 <li> <a href="./kashiffkhan.html">Kashiff Khan</a></li>
                 <li>
-                    <a href="./franchise.html">Fashion TV</a> </li>
+                    <a href="./introducation.html">Fashion TV</a> </li>
                 <li><a href="./shows.html">Channels</a></li>
                 <li><a href="./nites.html">FTV Champagne NITES</a></li>
                 <li><a href="./features.html">FTV Champagne Features</a></li>
-                <li><a href="./introducation.html">Introduction</a></li>
+                <li><a href="./franchise.html">Franchise</a></li>
 
             </ul>
         </div>
@@ -209,11 +209,11 @@
 
 
     <!-- Brand and Support -->
-    <div id="brandsupport">
+    <section id="brandsupport">
         <img src="./assets/images/brandsupport.png" alt="">
         <p>FashionTV gives 360 degree support to all our franchise partners. We help in all aspects ranging from <br> location, architecture, staff recruitment to PR launch plan, social media marketing, auditing, cross <br> marketing and more. Strategic
             planning which is very important for the success of any business, <br> is worked on extensively by our team and franchise partners. </p>
-    </div>
+    </section>
 
 
 
