--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <li> <a href="./micheladam.html">Michel Adam</a> </li>
                     <li> <a href="./kashiffkhan.html">Kashiff Khan</a></li>
                     <li>
-                        <a href="./franchise.html">Fashion TV</a> </li>
+                        <a href="./introducation.html">Fashion TV</a> </li>
                     <li><a href="./shows.html">Channels</a></li>
                     <li><a href="./nites.html">FTV Champagne NITES</a></li>
                     <li><a href="./features.html">FTV Champagne Features</a></li>
-                    <li><a href="./introducation.html">Introduction</a></li>
+                    <li><a href="./franchise.html">Franchise</a></li>
 
                 </ul>
             </div>
@@ -111,7 +111,7 @@
                 <p>FashionTV is known for delivering an extravagant and luxurious experience and setting. The FTV <br> champagne nites successfully fulfil the same expectations of aesthetic and Instagram worthy ambience <br> to set the mood right.</p>
             </div>
             <div class="video-source">
-                <img src="./assets/images/home video.PNG" alt="" srcset="">
+                <video loop muted autoplay src="./assets/videos/ftv champagne feature/AESTHETIC, INSTAGRAM WORTHY AMBIENCE.mp4"></video>
             </div>
         </div>
     </div>
