--- a/kashiffkhan.html
+++ b/kashiffkhan.html
@@ -29,11 +29,11 @@
                 <li> <a href="./micheladam.html">Michel Adam</a> </li>
                 <li> <a href="./kashiffkhan.html">Kashiff Khan</a></li>
                 <li>
-                    <a href="./franchise.html">Fashion TV</a> </li>
+                    <a href="./introducation.html">Fashion TV</a> </li>
                 <li><a href="./shows.html">Channels</a></li>
                 <li><a href="./nites.html">FTV Champagne NITES</a></li>
                 <li><a href="./features.html">FTV Champagne Features</a></li>
-                <li><a href="./introducation.html">Introduction</a></li>
+                <li><a href="./franchise.html">Franchise</a></li>
 
             </ul>
         </div>
@@ -73,7 +73,7 @@
     <!-- kashiff Background Section -->
 
 
-    <div id="kashiff-background">
+    <section id="kashiff-background">
         <div class="bg-content text-center">
             <h1>BACKGROUND</h1>
             <p>He comes with an ocean of experience in OTT/broadcast and a large gamut of various business ventures. Bringing in new <br> concepts to the business world, ranging from wellness, beauty, fitness, F&B, fashion retail, print, and channel broadcast
@@ -121,10 +121,10 @@
             </div>
         </div>
 
-    </div>
+    </section>
 
     <!-- kashiff History Section -->
-    <div id="kashiff-journey">
+    <section id="kashiff-journey">
         <div class="journey-content text-center">
             <h1>JOURNEY</h1>
         </div>
@@ -153,49 +153,49 @@
             </li>
 
         </ol>
-        </div>
+    </section>
 
 
 
 
-        <!-- Intro Footer Started -->
+    <!-- Intro Footer Started -->
 
-        <div id="footer">
-            <div class="footer-main">
-                <div class="footer-title">
-                    <h1>SUBSCRIBE TO OUR NEWSLETTER</h1>
+    <div id="footer">
+        <div class="footer-main">
+            <div class="footer-title">
+                <h1>SUBSCRIBE TO OUR NEWSLETTER</h1>
+            </div>
+            <div class="footer-main-content">
+                <div class="footer-content">
+                    <input type="email" placeholder="Enter your Email id" id="email" />
+                    <i class="fa fa-envelope-o"></i>
+                    <button type="submit" class="fa fa-long-arrow-right"></button>
                 </div>
-                <div class="footer-main-content">
-                    <div class="footer-content">
-                        <input type="email" placeholder="Enter your Email id" id="email" />
-                        <i class="fa fa-envelope-o"></i>
-                        <button type="submit" class="fa fa-long-arrow-right"></button>
-                    </div>
-                    <ul>
-                        <li><a href="">Careers </a></li>
-                        <span>|</span>
-                        <li><a href="">Privacy Policy</a></li>
-                        <span>|</span>
-                        <li><a href="">Terms & Conditions</a></li>
-                    </ul>
-                    <ul>
-                        <li> <i class="fa fa-facebook"></i></li>
-                        <li> <i class="fa fa-instagram"></i></li>
-                        <li> <i class="fa fa-twitter"></i></li>
-                    </ul>
-                </div>
-                <div class="ft-logo-right">
-                    <img src="./assets/images/Group 567.png" alt="" />
-                </div>
+                <ul>
+                    <li><a href="">Careers </a></li>
+                    <span>|</span>
+                    <li><a href="">Privacy Policy</a></li>
+                    <span>|</span>
+                    <li><a href="">Terms & Conditions</a></li>
+                </ul>
+                <ul>
+                    <li> <i class="fa fa-facebook"></i></li>
+                    <li> <i class="fa fa-instagram"></i></li>
+                    <li> <i class="fa fa-twitter"></i></li>
+                </ul>
+            </div>
+            <div class="ft-logo-right">
+                <img src="./assets/images/Group 567.png" alt="" />
             </div>
         </div>
+    </div>
 
 
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script src="main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
