--- a/micheladam.html
+++ b/micheladam.html
@@ -29,11 +29,11 @@
                     <li> <a href="./micheladam.html">Michel Adam</a> </li>
                     <li> <a href="./kashiffkhan.html">Kashiff Khan</a></li>
                     <li>
-                        <a href="./franchise.html">Fashion TV</a> </li>
+                        <a href="./introducation.html">Fashion TV</a> </li>
                     <li><a href="./shows.html">Channels</a></li>
                     <li><a href="./nites.html">FTV Champagne NITES</a></li>
                     <li><a href="./features.html">FTV Champagne Features</a></li>
-                    <li><a href="./introducation.html">Introduction</a></li>
+                    <li><a href="./franchise.html">Franchise</a></li>
 
                 </ul>
             </div>
@@ -78,7 +78,7 @@
     <!-- Michel Background Section -->
 
 
-    <div id="michel-background">
+    <section id="michel-background">
         <div class="bg-content text-center">
             <h1>BACKGROUND</h1>
             <p>Michel Adam was born on April 16 in Warsaw and is of Jewish descent. He moved to Vienna in 1958 along with his family. Later he was granted a scholarship for Mathematics at Princeton University. Fashion has always been closer to his heart.
@@ -86,10 +86,10 @@
                 in 2013, which became very popular among the fashion community. This café became a popular destination for many fashion shows, afterparties and other fashion events. This is how Michel Adam put the foundation of FashionTV’s massive empire.
             </p>
         </div>
-    </div>
+    </section>
 
     <!-- Michel History Section -->
-    <div id="michel-journey">
+    <section id="michel-journey">
         <div class="journey-content text-center">
             <h1>JOURNEY</h1>
         </div>
@@ -125,66 +125,66 @@
                 </div>
             </li>
         </ol>
+    </section>
+
+    <!-- Michel Future Section -->
+    <section id="michel-future">
+        <div class="future-bg-content text-center">
+            <h1>Future</h1>
+            <p>WITH FASHION TV, MICHEL ADAM INTENDS ON BUILDING PARTNERSHIPS THROUGH FASHIONTV. <br> Michel Adam’s entrepreneurial mind makes him think beyond and he is always taking fashion to <br> new heights. Keenly aware of the potential and reach of
+                FTV in India, the brand is introducing <br> various luxurious FTV businesses in the world’s second most populated country.</p>
         </div>
 
-        <!-- Michel Future Section -->
-        <div id="michel-future">
-            <div class="future-bg-content text-center">
-                <h1>Future</h1>
-                <p>WITH FASHION TV, MICHEL ADAM INTENDS ON BUILDING PARTNERSHIPS THROUGH FASHIONTV. <br> Michel Adam’s entrepreneurial mind makes him think beyond and he is always taking fashion to <br> new heights. Keenly aware of the potential and reach
-                    of FTV in India, the brand is introducing <br> various luxurious FTV businesses in the world’s second most populated country.</p>
-            </div>
-
-            <div class="michel-cards">
-                <img src="assets/images/testi.png" alt="">
-                <h1>Hi, this is Michel Adam, founder, and chairman of FTV.
-                </h1>
-                <p>I invite you to be a part of FashionTV with FTV Gym, and likewise, many other business opportunities presented just for the people of India. Looking forward to welcoming you on board.</p>
-                <img class="micelimg" src="./assets/images/michel-adam-lisowski-1.png" alt="">
-            </div>
-
+        <div class="michel-cards">
+            <img src="assets/images/testi.png" alt="">
+            <h1>Hi, this is Michel Adam, founder, and chairman of FTV.
+            </h1>
+            <p>I invite you to be a part of FashionTV with FTV Gym, and likewise, many other business opportunities presented just for the people of India. Looking forward to welcoming you on board.</p>
+            <img class="micelimg" src="./assets/images/michel-adam-lisowski-1.png" alt="">
         </div>
 
+    </section>
 
 
-        <!-- Intro Footer Started -->
 
-        <div id="footer">
-            <div class="footer-main">
-                <div class="footer-title">
-                    <h1>SUBSCRIBE TO OUR NEWSLETTER</h1>
+    <!-- Intro Footer Started -->
+
+    <div id="footer">
+        <div class="footer-main">
+            <div class="footer-title">
+                <h1>SUBSCRIBE TO OUR NEWSLETTER</h1>
+            </div>
+            <div class="footer-main-content">
+                <div class="footer-content">
+                    <input type="email" placeholder="Enter your Email id" id="email" />
+                    <i class="fa fa-envelope-o"></i>
+                    <button type="submit" class="fa fa-long-arrow-right"></button>
                 </div>
-                <div class="footer-main-content">
-                    <div class="footer-content">
-                        <input type="email" placeholder="Enter your Email id" id="email" />
-                        <i class="fa fa-envelope-o"></i>
-                        <button type="submit" class="fa fa-long-arrow-right"></button>
-                    </div>
-                    <ul>
-                        <li><a href="">Careers </a></li>
-                        <span>|</span>
-                        <li><a href="">Privacy Policy</a></li>
-                        <span>|</span>
-                        <li><a href="">Terms & Conditions</a></li>
-                    </ul>
-                    <ul>
-                        <li> <i class="fa fa-facebook"></i></li>
-                        <li> <i class="fa fa-instagram"></i></li>
-                        <li> <i class="fa fa-twitter"></i></li>
-                    </ul>
-                </div>
-                <div class="ft-logo-right">
-                    <img src="./assets/images/Group 567.png" alt="" />
-                </div>
+                <ul>
+                    <li><a href="">Careers </a></li>
+                    <span>|</span>
+                    <li><a href="">Privacy Policy</a></li>
+                    <span>|</span>
+                    <li><a href="">Terms & Conditions</a></li>
+                </ul>
+                <ul>
+                    <li> <i class="fa fa-facebook"></i></li>
+                    <li> <i class="fa fa-instagram"></i></li>
+                    <li> <i class="fa fa-twitter"></i></li>
+                </ul>
+            </div>
+            <div class="ft-logo-right">
+                <img src="./assets/images/Group 567.png" alt="" />
             </div>
         </div>
+    </div>
 
 
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script src="main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
